--- a/node-app/app/index.html
+++ b/node-app/app/index.html
@@ -33,21 +33,24 @@
   <div ng-view></div>
 
 
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpYpkxGMeJcDfwD5QJMhBZT0No7Jleg-E&sensor=false"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpYpkxGMeJcDfwD5QJMhBZT0No7Jleg-E&sensor=false"></script>
+        <!-- Hammer reload -->
+         
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/lodash/lodash.js"></script>
-  <script src="components/services.js"></script>
+   <script src="bower_components/lodash/lodash.js"></script>
+ <script src="components/services.js"></script>
   <script src="components/directives.js"></script>
-  <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
+   <script src="app.js"></script>
+   <script src="view1/view1.js"></script>
+   <script src="view2/view2.js"></script>
   <script src="data-test/data-test.js"></script>
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
+   <script src="components/version/version.js"></script>
+   <script src="components/version/version-directive.js"></script>
+   <script src="components/version/interpolate-filter.js"></script>
+
 </body>
 </html>
