--- a/node-app/app/view2/view2.html
+++ b/node-app/app/view2/view2.html
@@ -99,6 +99,7 @@
               
               <article class="crime-report">
                 <h2>Crime Report</h2>
+                {{data.foursquare.arts[0].name}}
               </article>
 
               <article class="demographics">
