--- a/node-app/app/data-test/data-test.html
+++ b/node-app/app/data-test/data-test.html
@@ -1,7 +1,7 @@
 <p>Selection is: {{loc.display}}.</p>
 <p>Latitude is: {{loc.geo.lat}}.</p>
 <p>Longitude is: {{loc.geo.lng}}.</p>
-<div><input ng-model="selectedAddress" googleplace/></div>
+<div><input google-maps-input /></div>
 <pre>
     {{data}}
 </pre>
