--- a/node-app/app/index.html
+++ b/node-app/app/index.html
@@ -43,10 +43,9 @@
   <div ng-view></div>
 
 
-   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpYpkxGMeJcDfwD5QJMhBZT0No7Jleg-E&sensor=false"></script>
-        <!-- Hammer reload -->
-         
-      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpYpkxGMeJcDfwD5QJMhBZT0No7Jleg-E&sensor=false&libraries=places"></script>
+   <!-- Hammer reload -->
+   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 
   <script src="bower_components/angular/angular.js"></script>
