--- a/node-app/app/view2/view2.html
+++ b/node-app/app/view2/view2.html
@@ -48,7 +48,7 @@
 
             <header id="header">
               <div id="menu-trigger" class="header-button left"></div>
-              <input type="text" id="address-search"/>
+              <input type="text" id="address-search" google-maps-input />
               <!-- <h1><a class='current' href="index.html">N<span class="icon-clock-1"></span>W</a></h1> -->
               <div class="main-info">
                 <h1>15 Hermann St.</h1>
