mikes latest changes

--- a/node-app/app/index.html
+++ b/node-app/app/index.html
@@ -26,6 +26,16 @@
     <li><a href="#/view2">view2</a></li>
   </ul>
 
+  <video autoplay loop style="position:absolute;z-index:0;">
+            <source src="/app/videos/clubhowse.mp4" type="video/mp4" />
+            <source src="/app/videos/clubhowse.webm" type="video/webm" />
+            <source src="/app/videos/clubhowse.ogv" type="video/ogg" />
+            <img src="/app/videos/BLEND-LOOP.png" title="Your browser does not support the <video> tag">
+</video>
+
+<input type="text" class="address-search" />
+
+
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
