--- a/node-app/app/view1/view1.html
+++ b/node-app/app/view1/view1.html
@@ -1,1 +1,6 @@
-<p>This is the partial for view 1.</p>
+<video autoplay loop muted style="position:absolute;z-index:-1;">
+            <source src="/app/videos/clubhowse.mp4" type="video/mp4" />
+            <source src="/app/videos/clubhowse.webm" type="video/webm" />
+            <source src="/app/videos/clubhowse.ogv" type="video/ogg" />
+            <img src="/app/videos/BLEND-LOOP.png" title="Your browser does not support the <video> tag">
+</video>
