--- a/node-app/app/view1/view1.html
+++ b/node-app/app/view1/view1.html
@@ -1,6 +1,10 @@
-<video autoplay loop muted style="position:absolute;z-index:-1;">
-            <source src="/app/videos/clubhowse.mp4" type="video/mp4" />
-            <source src="/app/videos/clubhowse.webm" type="video/webm" />
-            <source src="/app/videos/clubhowse.ogv" type="video/ogg" />
+<video id="clubhowse-video" autoplay loop muted style="position:absolute;z-index:-1;">
+            <source src="/app/videos/clubhowse2.mp4" type="video/mp4" />
+            <source src="/app/videos/clubhowse2.webm" type="video/webm" />
+            <source src="/app/videos/clubhowse2.ogv" type="video/ogg" />
             <img src="/app/videos/BLEND-LOOP.png" title="Your browser does not support the <video> tag">
 </video>
+
+
+
+<input type="text" class="address-search" />
