--- a/node-app/app/view2/view2.html
+++ b/node-app/app/view2/view2.html
@@ -58,18 +58,10 @@
 
           <!-- =Header -->
             <div id="map"></div>
-            <article class="photo-container" id="photo-container">
-                <img src="../app/img/photo-thumbnails/thumb-1.png" />
-                <img src="../app/img/photo-thumbnails/thumb-2.png" />
-                <img src="../app/img/photo-thumbnails/thumb-3.png" />
-                <img src="../app/img/photo-thumbnails/thumb-4.png" />
-                <img src="../app/img/photo-thumbnails/thumb-5.png" />
-                <img src="../app/img/photo-thumbnails/thumb-1.png" />
-                <img src="../app/img/photo-thumbnails/thumb-2.png" />
-                <img src="../app/img/photo-thumbnails/thumb-3.png" />
-                <img src="../app/img/photo-thumbnails/thumb-4.png" />
-                <img src="../app/img/photo-thumbnails/thumb-5.png" />
-            </article>
+             <article class="photo-container" id="photo-container">
+                <img ng-repeat="photo in data.photos" src="{{photo}}" />
+              </article>
+           
             <div id="content" class="blog">
 
                     
