--- a/node-app/app/view2/view2.html
+++ b/node-app/app/view2/view2.html
@@ -51,8 +51,8 @@
               <input type="text" id="address-search" google-maps-input />
               <!-- <h1><a class='current' href="index.html">N<span class="icon-clock-1"></span>W</a></h1> -->
               <div class="main-info">
-                <h1>15 Hermann St.</h1>
-                <p>Simi Valley, CA - 94105</p>
+                <h1>{{loc.address.street_address}}</h1>
+                <p>{{loc.address.city}}, {{loc.address.state}} - {{loc.address.zip}}</p>
               </div>
             </header>
 
@@ -90,67 +90,79 @@
 
               
               <article class="crime-report">
-                <h2>Crime Report</h2>
-                {{data.foursquare.arts[0].name}}
+                <div class="wrapped-content">
+                  <h2>Crime Report</h2>
+                  {{data.foursquare.arts[0].name}}
+                </div>
               </article>
 
               <article class="demographics">
-                <h2>Demographics</h2>
+                <div class="wrapped-content">
+                  <h2>Demographics</h2>
+                </div>
               </article>
 
               <article class="salaries">
-                <h2>Salaries</h2>
+                <div class="wrapped-content">
+                  <h2>Salaries</h2>
+                </div>
               </article>
 
                <article class="coffees">
-                <h2>Cafe</h2>
-                 <ul class="coffees">
-                  <li ng-repeat="coffees in data.foursquare.coffee | limitTo:10">
-                    <img src="{{coffees.photos[0].url}}" />
-                    <h3>{{coffees.name}}<h3>
-                    <p>{{coffees.location.formattedAddress[0]}}</p>
-                    <span class="hours">{{coffees.details.hours.status}}</span>
-                    <span class="open-now" ng-class="{{coffees.details.hours.isOpen}}"></span>
-                    <span class="distance">{{coffees.location.distance}}</span>
+                 <div class="wrapped-content">
+                    <h2>Cafe</h2>
+                     <ul class="coffees">
+                      <li ng-repeat="coffees in data.foursquare.coffee | limitTo:9">
+                        <img src="{{coffees.photos[0].url}}" />
+                        <h3>{{coffees.name}}<h3>
+                        <p>{{coffees.location.formattedAddress[0]}}</p>
+                        <span class="hours">{{coffees.details.hours.status}}</span>
+                        <span class="open-now" ng-class="{{coffees.details.hours.isOpen}}"></span>
+                        <span class="distance">{{coffees.location.distance}}</span>
 
-                  </li>
-                </ul>
+                      </li>
+                    </ul>
+                  </div>
               </article>
 
               <article class="shop">
-                <h2>Shopping</h2>
-                 <ul class="shop">
-                  <li ng-repeat="shop in data.foursquare.shops | limitTo:10">
-                    <img src="{{shop.photos[0].url}}" />
-                    <h3>{{shop.name}}<h3>
-                    <p>{{shop.location.formattedAddress[0]}}</p>
-                    <span class="hours">{{shop.details.hours.status}}</span>
-                    <span class="open-now" ng-class="{{shop.details.hours.isOpen}}"></span>
-                    <span class="distance">{{shop.location.distance}}</span>
+                <div class="wrapped-content">
+                   <h2>Shopping</h2>
+                   <ul class="shop">
+                    <li ng-repeat="shop in data.foursquare.shops | limitTo:9">
+                      <img src="{{shop.photos[0].url}}" />
+                      <h3>{{shop.name}}<h3>
+                      <p>{{shop.location.formattedAddress[0]}}</p>
+                      <span class="hours">{{shop.details.hours.status}}</span>
+                      <span class="open-now" ng-class="{{shop.details.hours.isOpen}}"></span>
+                      <span class="distance">{{shop.location.distance}}</span>
 
-                  </li>
-                </ul>
+                    </li>
+                  </ul>
+                </div>
               </article>
 
               <article class="foods">
+                <div class="wrapped-content">
                 <h2>Food</h2>
                  <ul class="foods">
-                  <li ng-repeat="foods in data.foursquare.food | limitTo:10">
+                  <li ng-repeat="foods in data.foursquare.food | limitTo:9">
                     <img src="{{foods.photos[0].url}}" />
                     <h3>{{foods.name}}<h3>
                     <p>{{foods.location.formattedAddress[0]}}</p>
                     <span class="hours">{{foods.details.hours.status}}</span>
                     <span class="open-now" ng-class="{{foods.details.hours.isOpen}}"></span>
                     <span class="distance">{{foods.location.distance}}</span>
-
                   </li>
                 </ul>
+                </div>
               </article>
 
               <article class="nightlife">
+               <div class="wrapped-content">
                 <h2>Nightlife</h2>
                 <ul class="nightlife">
-                  <li ng-repeat="drink in data.foursquare.drinks | limitTo:10">
+                  <li ng-repeat="drink in data.foursquare.drinks | limitTo:9">
                     <img src="{{drink.photos[0].url}}" />
                     <h3>{{drink.name}}<h3>
                     <p>{{drink.location.formattedAddress[0]}}</p>
@@ -160,49 +172,58 @@
 
                   </li>
                 </ul>
+              </div>
               </article>
 
               <article class="education">
-                <h2>Education</h2>
+                <div class="wrapped-content">
+                  <h2>Education</h2>
+                </div>
               </article>
 
               <article class="transportation">
-                <h2>Transportation</h2>
+                <div class="wrapped-content">
+                  <h2>Transportation</h2>
+                </div<
               </article>
 
               <article class="weather">
-                <h2>Weathers</h2>
+                <div class="wrapped-content">
+                  <h2>Weathers</h2>
+                </div>
               </article>
 
               <article class="outdoors">
+                <div class="wrapped-content">
                 <h2>Outdoors</h2>
                  <ul class="outdoors">
-                  <li ng-repeat="outdoor in data.foursquare.outdoors | limitTo:10">
+                  <li ng-repeat="outdoor in data.foursquare.outdoors | limitTo:9">
                     <img src="{{outdoor.photos[0].url}}" />
                     <h3>{{outdoor.name}}<h3>
                     <p>{{outdoor.location.formattedAddress[0]}}</p>
                     <span class="hours">{{outdoor.details.hours.status}}</span>
                     <span class="open-now" ng-class="{{outdoor.details.hours.isOpen}}"></span>
                     <span class="distance">{{outdoor.location.distance}}</span>
-
                   </li>
                 </ul>
+              </div>
               </article>
 
 
               <article class="things-to-see">
-                <h2>Things to see</h2>
-                 <ul class="sights">
-                  <li ng-repeat="sight in data.foursquare.sights | limitTo:10">
-                    <img src="{{sight.photos[0].url}}" />
-                    <h3>{{sight.name}}<h3>
-                    <p>{{sight.location.formattedAddress[0]}}</p>
-                    <span class="hours">{{sight.details.hours.status}}</span>
-                    <span class="open-now" ng-class="{{sight.details.hours.isOpen}}"></span>
-                    <span class="distance">{{sight.location.distance}}</span>
-
-                  </li>
-                </ul>
+                <div class="wrapped-content">
+                  <h2>Things to see</h2>
+                   <ul class="sights">
+                    <li ng-repeat="sight in data.foursquare.sights | limitTo:9">
+                      <img src="{{sight.photos[0].url}}" />
+                      <h3>{{sight.name}}<h3>
+                      <p>{{sight.location.formattedAddress[0]}}</p>
+                      <span class="hours">{{sight.details.hours.status}}</span>
+                      <span class="open-now" ng-class="{{sight.details.hours.isOpen}}"></span>
+                      <span class="distance">{{sight.location.distance}}</span>
+                    </li>
+                  </ul>
+                </div>
               </article>
 
 
