--- a/node-app/app/index.html
+++ b/node-app/app/index.html
@@ -104,6 +104,7 @@ censusModule.enable("c41228253f5c827ddb4dc9c2b78b96724c482402");
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
    <script src="bower_components/lodash/lodash.js"></script>
+  <script src="bower_components/x2js/xml2json.js"></script>
  <script src="components/services.js"></script>
   <script src="components/directives.js"></script>
    <script src="app.js"></script>
