mikes latest design changes

--- a/node-app/app/view1/view1.html
+++ b/node-app/app/view1/view1.html
@@ -5,6 +5,73 @@
             <img src="/app/videos/BLEND-LOOP.png" title="Your browser does not support the <video> tag">
 </video>
 
+<div class="overlay"></div>
+<div class="home-top">
+<div class="logo">
+    <img src="/app/img/clubhowse-07.svg" width="400px" />
+</div>
+
+<h3>
+  The right neighborhood, </br> for the right home. 
+</h3>
+
+<input type="text" class="address-search" placeholder="Enter an address" />
+
+</div>
 
 
-<input type="text" class="address-search" />
+<div class="bottom-section">
+  <article class="top-art">
+      <img src="../app/img/icon-2.svg" />
+      <h2>explore neighborhoods</h2>
+      <p>We make browsing a breeze. Whether you’re serious about 
+finding a new home, or just curious what’s out there, clubhowse will make you feel like a local. Learn everything you need or want to know about your next adventure.</p>
+
+  </article>
+
+  <article class="mid-art">
+      <img src="../app/img/icon-4.svg" />
+      <h2>weigh the options </h2>
+      <p>If you’re serious about finding a new home, it’s crucial to weigh 
+your options with real metrics. Clubhowse plugs in to multiple APIs 
+and aggregates the data you care about, then displays it in a clear
+and organized dashboard. Discover your community through our 
+easy to use interface, and save, track, and compare your options 
+without leaving your couch.</p>
+
+  </article>
+
+
+  <article class="bottom-art">
+     <img src="../app/img/icon-1.svg" />
+     <h2>secure your new pad </h2>
+     <p>Finding the right pad takes time. When you know it’s the one,
+don’t risk missing out. Secure your loan through our digital 
+mortgage platform, powered by blend.</p>
+  </article>
+
+<footer>
+  <ul>
+    <li>
+      <a href="#">Privacy Policy</a>
+    </li>
+    <li>
+      <a href="#">Terms</a>
+    </li>
+    <li>
+      <a href="#">Jobs</a>
+    </li>
+    <li>
+      <a href="#">How It Works</a>
+    </li>  
+  </ul>
+
+  <p>&copy; Copyright clubhowse</p>
+  <p>Powered by blend</p>
+
+</footer>
+
+</div>
+
+
+
