--- a/node-app/app/view1/view1.html
+++ b/node-app/app/view1/view1.html
@@ -15,7 +15,7 @@
   The right neighborhood, </br> for the right home. 
 </h3>
 
-<input type="text" class="address-search" placeholder="Enter an address" />
+<input type="text" class="address-search" placeholder="Enter an address" google-maps-input />
 
 </div>
 
