--- a/node-app/app/view1/view1.html
+++ b/node-app/app/view1/view1.html
@@ -1,4 +1,4 @@
-<video id="clubhowse-video" autoplay loop muted style="position:absolute;z-index:-1;">
+<video id="clubhowse-video" autoplay loop muted style="position:absolute;z-index:-1;height:100%;">
             <source src="/app/videos/clubhowse2.mp4" type="video/mp4" />
             <source src="/app/videos/clubhowse2.webm" type="video/webm" />
             <source src="/app/videos/clubhowse2.ogv" type="video/ogg" />
